eu FINALMENTE conseguilinkar as funcoes e agora o botao fechar so habilita se tiver um item selecionado em cada categoria

--- a/driveneats.css
+++ b/driveneats.css
@@ -86,6 +86,8 @@ nav{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-left: 8px;
+    padding-right: 6px;
     gap: 8px;
     box-shadow: 0 0 2px 1px  rgba(0, 0, 10, 0.25);;
     
@@ -93,14 +95,18 @@ nav{
 .selecionado{
     box-shadow: 0px 0px 10px -4px, inset 0px 0px 0px 5px #32B72F;
 }
-.selecionado ion-icon {
-    color: green
+.fechar{
+    background-color: #32B72F;
+    font-weight: 700;
 }
 .preco{
     display: flex;
     justify-content: space-between;
 }
 .check{
+    color: #32B72F
+}
+.escondido{
     display: none;
 }
 
