--- a/driveneats.css
+++ b/driveneats.css
@@ -51,6 +51,7 @@ h3{
     font-family: 'righteous', cursive;
     font-weight: 400;
     font-size: 26px;
+    width: 300px;
 }
 h4{
     font-family: 'roboto', sans-serif;
